--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-redux": "^7.2.0",
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "jest": {
     "testMatch": [
@@ -17,7 +19,8 @@
     },
     "setupFilesAfterEnv": [
       "@testing-library/react/cleanup-after-each",
-      "@testing-library/jest-dom/extend-expect"
+      "@testing-library/jest-dom/extend-expect",
+      "jest-localstorage-mock"
     ]
   },
   "scripts": {
@@ -50,6 +53,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4.0.4",
+    "jest-localstorage-mock": "^2.4.2",
     "prettier": "^2.0.5",
     "react-app-rewired": "^2.1.6"
   }
