--- a/package.json
+++ b/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "dependencies": {
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.19.2",
+    "immer": "^7.0.5",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.1",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-saga": "^1.1.3"
   },
   "jest": {
     "testMatch": [
@@ -18,7 +21,6 @@
       "^~/(.*)": "<rootDir>/src/$1"
     },
     "setupFilesAfterEnv": [
-      "@testing-library/react/cleanup-after-each",
       "@testing-library/jest-dom/extend-expect",
       "jest-localstorage-mock"
     ]
@@ -45,6 +47,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@types/jest": "^26.0.4",
+    "axios-mock-adapter": "^1.18.2",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.2.0",
     "eslint-config-prettier": "^6.11.0",
